<resources>
    <string name="app_name" translatable="false">Badin - Github</string>

    <string name="text_button_search">Search</string>
    <string name="description">Description</string>
    <string name="language">Language</string>
    <string name="forks">Forks count</string>
    <string name="watchers">Watchers count</string>

    <string name="username_repo_count" translatable="false">%1$s (%2$d)</string>
    <string name="search_user_hint">Enter username</string>
    <string name="avatar_description">User avatar</string>
    <string name="licence">Licence</string>
</resources>